--- a/style.css
+++ b/style.css
@@ -102,12 +102,14 @@ h2.section-name {
   margin-top: 0.25em;
   margin-bottom: 0.5rem;
   font-size: 1.75em;
-  font-weight: 400;
+  font-weight: 600;
 }
 
-main section#skills {
+main > section {
   padding-inline: 3%;
+  margin-bottom: 3em;
 }
+
 main section#skills ul.boxes {
   display: flex;
   flex-wrap: wrap;
@@ -116,9 +118,10 @@ main section#skills ul.boxes {
   align-content: flex-start;
   width: 50%;
   padding-inline: 0;
-  margin-top: 0.5rem;
-  margin-bottom: 0%;
-  margin-inline: 0;
+  margin-top: 1.25rem;
+  margin-bottom: 2.5em;
+  margin-left: 2.5rem;
+  margin-right: 0%;
 }
 main section#skills ul.boxes li {
   list-style-type: none;
@@ -133,7 +136,26 @@ main section#skills ul.boxes li a {
   text-decoration: none;
   color: #F8FAFC;
 }
+main section#skills section.skill {
+  margin-bottom: 2em;
+}
 main section#skills section.skill h3 {
   margin-top: 0.25em;
   font-style: italic;
+}
+main section#work-experience section.work p {
+  padding-inline: 2.5rem;
+}
+
+figure.header-caption {
+  margin-inline: 0%;
+  padding-inline: 2.5rem;
+}
+figure.header-caption h3 {
+  margin-top: auto;
+  margin-bottom: 0.33em;
+}
+figure.header-caption figcaption {
+  font-style: italic;
+  color: #475569;
 }/*# sourceMappingURL=style.css.map */
