--- a/style.scss
+++ b/style.scss
@@ -118,13 +118,16 @@ h2.section-name {
     margin-top: 0.25em;
     margin-bottom: 0.5rem;
     font-size: 1.75em;
-    font-weight: 400;
+    font-weight: 600;
+}
+
+main > section {
+    padding-inline: 3%;
+    margin-bottom: 3em;
 }
 
 main {
     section#skills {
-        padding-inline: 3%;
-
         ul.boxes {
             display: flex;
             flex-wrap: wrap;
@@ -134,9 +137,10 @@ main {
 
             width: 50%;
             padding-inline: 0;
-            margin-top: 0.5rem;
-            margin-bottom: 0%;
-            margin-inline: 0;
+            margin-top: 1.25rem;
+            margin-bottom: 2.5em;
+            margin-left: 2.5rem;
+            margin-right: 0%;
 
             li {
                 list-style-type: none;
@@ -157,10 +161,38 @@ main {
         }
 
         section.skill {
+            margin-bottom: 2em;
             h3 {
                 margin-top: 0.25em;
                 font-style: italic;
             }
         }
+    }
+
+    section#education {
+
+    }
+
+    section#work-experience {
+        section.work {
+            p {
+                padding-inline: 2.5rem;
+            }
+        }
+    }
+}
+
+figure.header-caption {
+    margin-inline: 0%;
+    padding-inline: 2.5rem;
+
+    h3 {
+        margin-top: auto;
+        margin-bottom: 0.33em;
+    }
+
+    figcaption {
+        font-style: italic;
+        color: #475569;
     }
 }
