feat: add skill boxes html

--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ html {
     padding: 0%;
     margin: 0%;
 
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Inter', sans-serif;
     font-style: normal; 
     color: #0F172A;;
@@ -67,35 +67,30 @@ header {
         }
 
         ul#contacts {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            align-items: flex-start;
-            align-content: flex-start;
-            justify-content: space-between;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(auto-fill, minmax(1em, 1fr));
             column-gap: 0.5em;
-            padding-inline: 0%;
+            row-gap: 0.5em;
     
-            height: 3em;
-            width: 70%;
+            width: 50%;
     
             li {
                 list-style-position: inside;
                 align-self: stretch;
-                flex-grow: 0;
-                margin-right: 2em;
+                // flex-grow: 0;
             }
     
             li#email {
-                list-style-image: url(/Images/iconEmail.svg);
+                list-style-image: url(Images/iconEmail.svg);
             }
     
             li#adress {
-                list-style-image: url(/Images/iconAdress.svg);
+                list-style-image: url(Images/iconAdress.svg);
             }
     
             li#phone {
-                list-style-image: url(/Images/iconPhone.svg);
+                list-style-image: url(Images/iconPhone.svg);
             }
             
             li#inter-exchange {
@@ -104,6 +99,9 @@ header {
                     display: inline-block;
                     height: 1em;
                     img {
+                        position: relative;
+                        top: 3px;
+                        left: -1px;
                         height: 100%;
                         display: inline-block;
                         text-align: start;
@@ -160,13 +158,47 @@ main {
             }
         }
 
-        section.skill {
-            margin-bottom: 2em;
-            h3 {
-                margin-top: 0.25em;
-                font-style: italic;
+        section#skill-boxes {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+
+            figure.skill {
+                flex-grow: 1;
+                flex-shrink: 1;
+                flex-basis: content;
+                box-sizing: content-box;
+                margin: 0% 1em 1.5em 0%;
+                padding: 0.25em;
+
+                border: 2px solid #0F172A;
+                border-radius: 2%;
+
+                h3 {
+                    width: max-content;
+                    margin-top: 0em;
+                    margin-bottom: 0.5em;
+                    margin-inline: 0%;
+                    text-align: left;
+                    text-decoration: underline;
+                }
+
+                figcaption {
+                    box-sizing: border-box;
+                    min-height: 12em;
+                    // padding-left: 2em;
+                    // text-align: justify;
+                }
             }
         }
+
+        // section.skill {
+        //     margin-bottom: 2em;
+        //     h3 {
+        //         margin-top: 0.25em;
+        //         font-style: italic;
+        //     }
+        // }
     }
 
     section#education {
