--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   padding: 0%;
   margin: 0%;
-  font-size: 16px;
+  font-size: 14px;
   font-family: "Inter", sans-serif;
   font-style: normal;
   color: #0F172A;
@@ -58,32 +58,26 @@ header section#about-me-contacts article#about-me {
   text-align: start;
 }
 header section#about-me-contacts ul#contacts {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  align-content: flex-start;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(auto-fill, minmax(1em, 1fr));
   -moz-column-gap: 0.5em;
        column-gap: 0.5em;
-  padding-inline: 0%;
-  height: 3em;
-  width: 70%;
+  row-gap: 0.5em;
+  width: 50%;
 }
 header section#about-me-contacts ul#contacts li {
   list-style-position: inside;
   align-self: stretch;
-  flex-grow: 0;
-  margin-right: 2em;
 }
 header section#about-me-contacts ul#contacts li#email {
-  list-style-image: url(/Images/iconEmail.svg);
+  list-style-image: url(Images/iconEmail.svg);
 }
 header section#about-me-contacts ul#contacts li#adress {
-  list-style-image: url(/Images/iconAdress.svg);
+  list-style-image: url(Images/iconAdress.svg);
 }
 header section#about-me-contacts ul#contacts li#phone {
-  list-style-image: url(/Images/iconPhone.svg);
+  list-style-image: url(Images/iconPhone.svg);
 }
 header section#about-me-contacts ul#contacts li#inter-exchange {
   list-style-type: none;
@@ -93,6 +87,9 @@ header section#about-me-contacts ul#contacts li#inter-exchange a {
   height: 1em;
 }
 header section#about-me-contacts ul#contacts li#inter-exchange a img {
+  position: relative;
+  top: 3px;
+  left: -1px;
   height: 100%;
   display: inline-block;
   text-align: start;
@@ -136,12 +133,34 @@ main section#skills ul.boxes li a {
   text-decoration: none;
   color: #F8FAFC;
 }
-main section#skills section.skill {
-  margin-bottom: 2em;
+main section#skills section#skill-boxes {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
-main section#skills section.skill h3 {
-  margin-top: 0.25em;
-  font-style: italic;
+main section#skills section#skill-boxes figure.skill {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: content;
+  box-sizing: content-box;
+  margin: 0% 1em 1.5em 0%;
+  padding: 0.25em;
+  border: 2px solid #0F172A;
+  border-radius: 2%;
+}
+main section#skills section#skill-boxes figure.skill h3 {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin-top: 0em;
+  margin-bottom: 0.5em;
+  margin-inline: 0%;
+  text-align: left;
+  text-decoration: underline;
+}
+main section#skills section#skill-boxes figure.skill figcaption {
+  box-sizing: border-box;
+  min-height: 12em;
 }
 main section#work-experience section.work p {
   padding-inline: 2.5rem;
