--- a/style.scss
+++ b/style.scss
@@ -160,15 +160,24 @@ main {
 
         section#skill-boxes {
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
+            flex-flow: row wrap;
+
+            div.flex-row {
+                display: flex;
+                flex-flow: row;
+            }
+
+            @media (orientation: portrait) {
+                div.flex-row {
+                    flex-wrap: wrap;
+                }
+            }
 
             figure.skill {
-                flex-grow: 1;
-                flex-shrink: 1;
-                flex-basis: content;
+                flex: auto;
+                min-height: 10em;
                 box-sizing: content-box;
-                margin: 0% 1em 1.5em 0%;
+                margin: 0 1em 1em 0;
                 padding: 0.25em;
 
                 border: 2px solid #0F172A;
@@ -178,16 +187,14 @@ main {
                     width: max-content;
                     margin-top: 0em;
                     margin-bottom: 0.5em;
-                    margin-inline: 0%;
-                    text-align: left;
+                    margin-inline: auto;
+                    text-align: center;
                     text-decoration: underline;
                 }
 
                 figcaption {
                     box-sizing: border-box;
-                    min-height: 12em;
-                    // padding-left: 2em;
-                    // text-align: justify;
+                    text-align: justify;
                 }
             }
         }
