--- a/style.scss
+++ b/style.scss
@@ -36,9 +36,10 @@ body {
 
 header {
     margin-top: 0%;
-    padding-inline: 3%;
-    width: 100%;
     box-sizing: border-box;
+    width: 100%;
+    padding-inline: 3%;
+
     background: #F8FAFC;
 
     h1 {
@@ -74,10 +75,12 @@ header {
             row-gap: 0.5em;
     
             width: 50%;
+            padding-inline-start: 0;
     
             li {
                 list-style-position: inside;
                 align-self: stretch;
+                white-space: nowrap;
                 // flex-grow: 0;
             }
     
@@ -113,7 +116,7 @@ header {
 }
 
 h2.section-name {
-    margin-top: 0.25em;
+    margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     font-size: 1.75em;
     font-weight: 600;
@@ -121,46 +124,17 @@ h2.section-name {
 
 main > section {
     padding-inline: 3%;
-    margin-bottom: 3em;
+    margin-block: 2em;
 }
 
 main {
     section#skills {
-        ul.boxes {
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: row;
-            align-items: flex-start;
-            align-content: flex-start;
-
-            width: 50%;
-            padding-inline: 0;
-            margin-top: 1.25rem;
-            margin-bottom: 2.5em;
-            margin-left: 2.5rem;
-            margin-right: 0%;
-
-            li {
-                list-style-type: none;
-                display: block;
-
-                margin-right: 1.5em;
-                margin-bottom: 1.5em;
-                padding: 0.5em;
-
-                background-color: #0F172A;
-                border-radius: 0.25em;
-
-                a {
-                    text-decoration: none;
-                    color: #F8FAFC;
-                } 
-            }
-        }
 
         section#skill-boxes {
             display: flex;
             flex-flow: row wrap;
+            margin-top: 1em;
+            padding-left: 2.5rem;
 
             div.flex-row {
                 display: flex;
@@ -175,7 +149,7 @@ main {
 
             figure.skill {
                 flex: auto;
-                min-height: 10em;
+                min-height: 7em;
                 box-sizing: content-box;
                 margin: 0 1em 1em 0;
                 padding: 0.25em;
@@ -190,6 +164,7 @@ main {
                     margin-inline: auto;
                     text-align: center;
                     text-decoration: underline;
+                    font-weight: 700;
                 }
 
                 figcaption {
@@ -198,24 +173,23 @@ main {
                 }
             }
         }
-
-        // section.skill {
-        //     margin-bottom: 2em;
-        //     h3 {
-        //         margin-top: 0.25em;
-        //         font-style: italic;
-        //     }
-        // }
-    }
-
-    section#education {
-
     }
 
     section#work-experience {
-        section.work {
+        section.work {   
             p {
                 padding-inline: 2.5rem;
+            }
+        }
+    }
+
+    section#personal {
+        section#info {
+            padding-inline: 3%;
+            margin-top: 1em;
+            ul {
+                margin-top: 0%;
+                padding: 0%;
             }
         }
     }
@@ -234,4 +208,14 @@ figure.header-caption {
         font-style: italic;
         color: #475569;
     }
+}
+
+footer {
+    box-sizing: border-box;
+    width: 100%;
+    padding-inline: 3%;
+
+    background: #F8FAFC;
+    
+    text-align: right;
 }
