--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ html {
     padding: 0%;
     margin: 0%;
 
-    font-size: 14px;
+    font-size: 15px;
     font-family: 'Inter', sans-serif;
     font-style: normal; 
     color: #0F172A;;
@@ -56,7 +56,7 @@ header {
 
     section#about-me-contacts {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
         align-items: flex-start;
         justify-content: space-between;
@@ -66,6 +66,12 @@ header {
         article#about-me {
             text-align: start;
         }
+
+        p#birth-date {
+            margin-top: 0%;
+            text-align: start;
+        }
+        
 
         ul#contacts {
             display: grid;
