--- a/style.css
+++ b/style.css
@@ -31,11 +31,25 @@ body {
 }
 
 header {
-  margin-top: 0%;
+  display: flex;
+  flex-direction: row;
   box-sizing: border-box;
   width: 100%;
+  padding-top: 1em;
   padding-inline: 3%;
   background: #F8FAFC;
+}
+header #cv-photo {
+  flex-grow: 3;
+  width: 12em;
+  height: 12em;
+  border: 4px solid #0F172A;
+  border-radius: 4px;
+}
+header #header-text {
+  flex-grow: 5;
+  margin-left: 2em;
+  padding-right: 20%;
 }
 header h1 {
   margin-top: 0%;
@@ -44,7 +58,7 @@ header h1 {
 }
 header h2 {
   margin-top: 0.1em;
-  margin-bottom: 0.75em;
+  margin-bottom: 0.25em;
   text-align: start;
 }
 header h2 #wat-header {
