--- a/style.scss
+++ b/style.scss
@@ -35,12 +35,30 @@ body {
 }
 
 header {
-    margin-top: 0%;
+    display: flex;
+    flex-direction: row;
+
     box-sizing: border-box;
     width: 100%;
+    padding-top: 1em;
     padding-inline: 3%;
 
     background: #F8FAFC;
+
+    #cv-photo {
+        flex-grow: 3;
+        width: 12em;
+        height: 12em;
+
+        border: 4px solid #0F172A;
+        border-radius: 4px;
+    }
+
+    #header-text {
+        flex-grow: 5;
+        margin-left: 2em;
+        padding-right: 20%;
+    }
 
     h1 {
         margin-top: 0%;
@@ -50,7 +68,7 @@ header {
 
     h2 {
         margin-top: 0.1em;
-        margin-bottom: 0.75em;
+        margin-bottom: 0.25em;
         text-align: start;
 
         #wat-header {
